Fix flexbox bug on Safari

--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -27,6 +27,8 @@
     padding: 0;
 
     li {
+      display: flex;
+      flex-direction: column;
       flex: 0 0 100%;
       display: flex;
       flex-direction: column;
@@ -50,11 +52,12 @@
       }
 
       .text {
+        flex-grow: 1;
         position: relative;
         display: flex;
         justify-content: center;
         flex-direction: column;
-        height: calc(100% - 40px);
+        //height: calc(100% - 40px);
         padding: 20px;
         border: 2px solid $green;
         word-break: break-word;
